--- a/docs/main.tex
+++ b/docs/main.tex
@@ -2,7 +2,7 @@
 
 \documentclass[12pt]{article}
 
-\title{Documentation Magnum Dynamics}
+\title{Documentation Science Graphics}
 \author{Bernardo Fichera}
 \date{March 2020}
 
